--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.0"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.0"
+
 
     defaultConfig {
         applicationId "com.example.flixster"
@@ -20,11 +21,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'junit:junit:4.12'
@@ -34,10 +39,10 @@ dependencies {
     implementation 'com.codepath.libraries:asynchttpclient:0.0.9'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
-    // If you want to use the GPU Filters
+
     implementation 'jp.co.cyberagent.android:gpuimage:2.0.4'
 }
