--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
     implementation 'jp.co.cyberagent.android:gpuimage:2.0.4'
+
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
+
