--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,8 @@ dependencies {
     implementation 'jp.co.cyberagent.android:gpuimage:2.0.4'
 
     implementation 'com.android.support:support-annotations:28.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
+
 }
 
