--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.0.0'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
 
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
+
 }
 
